@@ -5,8 +5,10 @@
   <title>Prototype Unit test file | <%= @title %></title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <script type="text/javascript" charset="utf-8">
-    var eventResults = {};
     var originalElement = window.Element;
+    var eventResults = {
+      eventElement:  { }
+    };
   </script>
   <script src="../../../dist/prototype.js" type="text/javascript"></script>
   <script src="../../lib/unittest.js" type="text/javascript"></script>
